# cn-member-authority

./: .gitignore  README.md  pyproject.toml
infra/env/dev/: main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/modules/cloud_run_job/: main.tf  outputs.tf  variables.tf
src/: config.py  google_groups_service.py  main.py  notion_helper.py  secret_manager_helper.py
